[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["Brian Lemons <brian_lemons@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"
black = "^21.5b2"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
